objects/Narvar_Link_mapping__mdt.object
<CustomObject>
    <description>Metadata type to create narvar links depending on various Business Units &amp; Languages</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                    <default>true</default>
                    <label>Hudson&apos;s Bay</label>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Narvar__c</fullName>
        <label>Link to Narvar</label>
        <type>Url</type>
    </fields>
    <label>Narvar Link mapping</label>
    <listViews>
        <fullName>All_with_Info</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Business_Unit__c</columns>
        <columns>Language__c</columns>
        <columns>Link_to_Narvar__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Info</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Narvar Link mappings</pluralLabel>
</CustomObject>